@@ -2,6 +2,8 @@ package uz.ejavlon;
 
 import uz.ejavlon.models.Aquarium;
 import java.util.Random;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
 
 public class AquariumApplication {
     public static void main(String[] args) {
@@ -12,7 +14,11 @@ public class AquariumApplication {
         int m = random.nextInt(20) + 1;
 
         Aquarium aquarium = new Aquarium(n, m);
-        new Thread(aquarium).start();
+//        new Thread(aquarium).start();
+//        Thread.ofVirtual().start(aquarium);
+        try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
+            executor.submit(aquarium); // Virtual thread orqali ishga tushirish
+        }
 
     }
 }
